# OpenMAMA-zmq

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
src/: CMakeLists.txt  bridge.c  transport.c  zmqdefs.h
